tests/ui/type-alias-impl-trait/constrain_in_projection2.next.stderr
error[E0283]: type annotations needed: cannot satisfy `Foo: Trait<Bar>`
  --> $DIR/constrain_in_projection2.rs:28:14
   |
LL |     let x = <Foo as Trait<Bar>>::Assoc::default();
   |              ^^^
   |
note: multiple `impl`s satisfying `Foo: Trait<Bar>` found
  --> $DIR/constrain_in_projection2.rs:18:1
   |
LL | impl Trait<()> for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Trait<u32> for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: associated types cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`
help: use the fully qualified path to an implementation
   |
LL -     let x = <Foo as Trait<Bar>>::Assoc::default();
LL +     let x = <<Type as Trait>::Assoc as Trait<Bar>>::Assoc::default();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
